stages/post-push/kubernetes-resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-name
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-name
  template:
    metadata:
      labels:
        app: app-name
    spec:
      containers:
        - name: app-name
          image: docker-registry/image:tag
          imagePullPolicy: Always
          ports:
            - containerPort: 80
