stages/post-push/kubernetes-resources/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
